# drawww

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
frontend/: drawww.data  drawww.js  drawww.wasm  index.css  index.html  index.js
src/: drawable.h  engine.cpp  engine.h  gl.cpp  point.cpp  point.h  ray.cpp  ray.h  shader.cpp  shader.h  utils.cpp  utils.h
src/shaders/point/: point.frag  point.vert  point_webgl2.frag  point_webgl2.vert
